@@ -52,6 +52,7 @@ These extensions are built in and can be activated by respective entries in the
    ext/coverage
    ext/todo
    ext/extlinks
+   ext/viewcode
 
 
 Third-party extensions
